--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -250,7 +250,7 @@
         
         <div id="videoInfo">
             <div class="video-info">
-                <h3>🔍 Detecting video...</h3>
+                <h3>📺 Ready to summarize</h3>
                 <p class="video-id">Please wait...</p>
             </div>
         </div>
